deploy/policies/disallow-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: high
    policies.kyverno.io/description: >-
      Containers must run as non-root users to reduce attack surface and prevent host escalation.
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaceSelector:
                matchLabels:
                  platform.kube-delivery.io/security-profile: restricted
      validate:
        message: "Running as root is prohibited. Set securityContext.runAsNonRoot=true and specify runAsUser > 0."
        foreach:
          - list: request.object.spec.[ephemeralContainers, initContainers, containers][]
            pattern:
              securityContext:
                runAsNonRoot: true
